# RaytraceEngine

./: CMakeLists.txt  Coordinate.cpp  Coordinate.h  README.md  Ray.cpp  Ray.h  main.cpp
Objects/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
Scenes/: CityScapeCar.txt  Cone.txt  Cube.txt  Cylinder.txt  Default.txt  GoldTexture.txt  Jaws.txt  README.md  Sphere.txt
